# dudu

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  COPYRIGHT  README.md  goal_stack.txt  install.sh
.github/workflows/: macos-preflight.yml  pages.yml  publish-editors.yml  release.yml
benchmarks/: callback_accum.cpp  callback_accum.dd  field_dot.cpp  field_dot.dd  fixed_array_mix.cpp  fixed_array_mix.dd  list_accum.cpp  list_accum.dd  particle_update.cpp  particle_update.dd  pointer_sum.cpp  pointer_sum.dd  python_compare.py  scalar_sum.cpp  scalar_sum.dd  threaded_accum.cpp  threaded_accum.dd  tuple_accum.cpp  tuple_accum.dd
docs/: allocation-and-lifetimes.md  appearance-spec-old.md  appearance-spec.md  arrays-indexing-plan.md  arrays-views-and-indexing.md  ast-plan.md  collections.md  compile-time-programming.md  compiler-cleanup.md  compiler-performance-matrix.md  compiler-plan.md  cpp-stdlib-interop.md  destringing-goals.md  developer-guide.md  development-plan.md  distribution-operator-checklist.md  distribution-plan.md  documentation-plan.md  editor-intelligence-plan.md  editor-reliability-plan.md  fixed-arrays-and-numeric-literals.md  generated-cpp-boundary-plan.md  generics-plan.md  generics.md  goals.md  header-awareness-plan.md  import_semantics.md  indexing-dispatch-model.md  inheritance-plan.md  installing.md  interop.md  known-limitations.md  language-reference-completion-plan.md  language-server-plan.md  language.md  le_plan.md  leplan2.md  macro-performance-matrix.md  macro-performance-plan.md  macro-syntax-plan.md  (+20 more)
duduplayground/: README.md  dudu.toml
duduplayground/src/: main.dd
duduplayground/tests/: math_tests.dd
editors/vscode/: .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  extension.js  language-configuration.json  package-lock.json  package.json
examples/: allocators.dd  audio_synth.dd  compile_time.dd  cpp_library.dd  cuda_kernel.dd  cuda_runtime.h  cuda_shared_memory_tile.dd  ffmpeg_probe_decode.dd  fibonacci.dd  function_pointers.dd  glfw_opengl_triangle.dd  hello.dd  hello.dudu  hello.glaive  httplib.h  image_filter.dd  interrupt_handler.dd  layout_hardware.dd  macro_bomb.dd  math.dd  modules_visibility.dd  native_escape.dd  numerics_kmeans.dd  opencl_kernel_host.dd  raylib_game.dd  raylib_window.dd  raylib_window.dudu  raylib_window.glaive  sdl3_imgui.dd  sdl3_window.dd  shader_compute.dd  systems_mmap.dd  tensor_views.dd  threading_atomics.dd  use_math.dd  vulkan_triangle.dd  web_server.dd
examples/python_syntax/: audio_synth.dd  numerics_kmeans.dd  raylib_game.dd  systems_mmap.dd
examples/support/: raylib_cpp.hpp
lib/dudu/: ast.dd  macro.dd
packaging/: install-owner.in
schema/: macro_ast.json
scripts/: add-release-asset.sh  bench.sh  bench_compiler.sh  bench_compiler_compare.py  bench_compiler_core_cases.sh  bench_compiler_macro_cases.sh  bench_compiler_native_cases.sh  bench_compiler_project_cases.sh  bench_compiler_scaling_cases.sh  bench_macro_compare_csharp.sh  bench_macro_compare_nim.sh  bench_macro_compare_rust.sh  bench_macro_compare_swift.sh  bench_native_headers.py  bench_python.sh  build-deb.sh  build-release-artifacts.sh  build.sh  check_ast_migration_guards.sh  check_site.py  check_site.sh  check_targets.sh  deploy-site.sh  dev_env.sh  emit_examples.sh  format.sh  generate-package-recipes.sh  generate_macro_ast.py  install-local.sh  lsp_latency_cases.py  macro_ast_dudu_api.py  package-vscode.sh  probe_cpp_stdlib_algorithms.sh  probe_lsp_dogfood_latency.py  probe_lsp_optional.sh  probe_native_graduation.sh  probe_optional.sh  release-check.sh  report_macro_benchmarks.py  setup_dev_deps.sh  (+30 more)
scripts/lsp_smoke/: assertions_00.py  assertions_01.py  case_expectations.py  case_messages_00.py  case_messages_01.py  case_messages_02.py  case_messages_03.py  case_setup.py  protocol.py  run_server.py
site/: _redirects  docs.css  docs.html  examples.html  index.html  install.css  install.html  interop.html  layout.css  performance.css  performance.html  roadmap.html  styles.css  tour.html  why.css  why.html
site/assets/: NOTICE.md  docs.js  syntax.css  syntax.js
src/: main.cpp
src/dudu/: array_shape.cpp  array_shape.hpp  ast.cpp  ast.hpp  ast_expr.cpp  ast_expr.hpp  ast_expr_parse.cpp  ast_expr_token_core.cpp  ast_expr_token_parser.hpp  ast_expr_token_postfix.cpp  ast_parse_scan.cpp  ast_parse_utils.cpp  ast_parse_utils.hpp  ast_stmt_parse.cpp  ast_type.cpp  ast_type.hpp  ast_type_parse.cpp  ast_type_token_parser.cpp  ast_type_token_parser.hpp  build_backend_select.cpp  build_backend_select.hpp  build_flags.cpp  build_flags.hpp  cli_command.cpp  cli_command.hpp  cli_options.cpp  cli_options.hpp  cli_usage.cpp  cli_usage.hpp  cmake_backend.cpp  cmake_backend.hpp  cmake_emit.cpp  cmake_emit.hpp  control_flow.cpp  control_flow.hpp  (+263 more)
tests/: ast_declaration_query_tests.cpp  ast_expression_shape_tests.cpp  ast_frontend_tests.cpp  ast_shape_frontend_tests.cpp  ast_statement_tests.cpp  ast_type_core_tests.cpp  ast_type_frontend_tests.cpp  ast_type_shape_tests.cpp  cpp_module_artifact_tests.cpp  emit_class_function_tests.cpp  emit_collection_match_tests.cpp  emit_frontend_tests.cpp  emit_native_pointer_tests.cpp  enum_method_tests.cpp  format_tests.cpp  frontend_diagnostics_format_tests.cpp  frontend_semantics_codegen_tests.cpp  frontend_syntax_fixture_tests.cpp  frontend_tests.cpp  language_server_completion_inlay_tests.cpp  language_server_definition_hover_tests.cpp  language_server_diagnostics_tests.cpp  language_server_module_native_references_tests.cpp  language_server_native_editor_tests.cpp  language_server_navigation_tests.cpp  language_server_project_index_tests.cpp  language_server_semantic_token_tests.cpp  language_server_symbol_references_tests.cpp  language_server_tests.cpp  language_server_text_sync_tests.cpp  language_server_workspace_tests.cpp  macro_ast_bridge_tests.cpp  macro_capability_tests.cpp  macro_expansion_render_tests.cpp  macro_expansion_tests.cpp  macro_package_fixture_tests.cpp  macro_protocol_tests.cpp  macro_syntax_tests.cpp  macro_worker_binary_tests.cpp  macro_worker_codegen_tests.cpp  (+24 more)
(+1302 files in other folders)
